<resources>
    <string name="app_name">DDC</string>
    <string name="activity_search">Welcome</string>
    <string name="activity_results">Results</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_check">Check-in Complete</string>
    <string name="activity_results_confirm">Confirm</string>
    <string name="activity_results_accomponay">Accompany by</string>
    <string name="activity_search_reservation">Please enter your name to locate your reservation or scan the QR code</string>
    <string name="activity_result_reservation">Description about the company results</string>
    <string name="fa_icon_user">&#xf007;</string>
    <string name="fa_icon_qrcode">&#xf029;</string>
    <string name="fa_icon_check_circle">&#xf058;</string>
    <string name="activity_search_button_scan">SCAN INVITATION</string>
    <string name="activity_search_user_login">SIGN IN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_Login_fragment">Hello Login Fragment</string>
    <string name="hello_setting_fragment">Hello Setting Fragment</string>
</resources>
