<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/commentsParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="kiosk.ddc.a3nomdev.myapplication.MainActivity">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"

                android:text="Annual School Gala 2017" />

            <TextView
                android:id="@+id/textViewRecomendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/activity_search_reservation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:id="@+id/mio"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewUserIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/fa_icon_user"
                                android:textColor="@color/colorPrimary"
                                android:textSize="45sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.7"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">


                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/Widget.AppCompat.EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Last Name, First Name"
                                android:inputType="textPersonName"
                                android:theme="@style/UserName.EditText" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:text="or" />

                            <EditText
                                android:id="@+id/editTextCompany"
                                style="@style/Widget.AppCompat.EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Company Name"
                                android:inputType="textPersonName"
                                android:theme="@style/UserName.EditText" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">


                                <Button
                                    android:id="@+id/UserLogin"
                                    style="@style/Widget.AppCompat.Button.Colored"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/activity_search_user_login"
                                    android:textColor="#FFFF"
                                    android:theme="@style/User.Button" />
                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:id="@+id/mio2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewUserScan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/fa_icon_qrcode"
                                android:textColor="@color/colorScan"
                                android:textSize="45sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.7"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">


                            <Button
                                android:id="@+id/buttonScan"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/activity_search_button_scan"
                                android:textColor="#FFFF"
                                android:theme="@style/Scan.Button" />
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>